Endpoints changed to snake case
